--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,17 @@
 {
-    "name": "supergnaw/nestbox",
-    "description": "A interface for databases using PHP Data Objects written to easily fill gaps of niche requirements.",
-    "type": "library",
-    "license": "AGPL-3.0",
-    "autoload": {
-        "psr-4": {
-            "Supergnaw\\Nestbox\\": "src/"
-        }
-    },
-    "minimum-stability": "stable",
-    "require": {
-        "ext-pdo": "*",
-        "ext-openssl": "*"
+  "name": "supergnaw/nestbox",
+  "description": "A interface for databases using PHP Data Objects written to easily fill gaps of niche requirements.",
+  "type": "library",
+  "license": "AGPL-3.0",
+  "autoload": {
+    "psr-4": {
+      "Supergnaw\\Nestbox\\": "src/"
     }
+  },
+  "minimum-stability": "stable",
+  "require": {
+    "ext-pdo": "*",
+    "ext-openssl": "*",
+    "ext-curl": "*"
+  }
 }
