--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-  "name": "supergnaw/nestbox",
+  "name": "nestboxphp/nestbox",
   "description": "A interface for databases using PHP Data Objects written to easily fill gaps of niche requirements.",
   "type": "library",
   "license": "AGPL-3.0",
   "autoload": {
     "psr-4": {
-      "Supergnaw\\Nestbox\\": "src/"
+      "NestboxPHP\\Nestbox\\": "src/"
     }
   },
   "minimum-stability": "stable",
